objects/Callout__mdt.object
<CustomObject>
    <fields>
        <fullName>Auth_Callout_Handler__c</fullName>
        <label>Auth Callout Handler</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Callout__c</fullName>
        <label>Auth Callout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_URL__c</fullName>
        <label>Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Callout_Execution__c</fullName>
        <label>Custom Callout Execution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Auth_Callout__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auth Callout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GET</fullName>
                    <default>true</default>
                    <label>GET</label>
                </value>
                <value>
                    <fullName>POST</fullName>
                </value>
                <value>
                    <fullName>PUT</fullName>
                </value>
                <value>
                    <fullName>DELETE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pre_Auth_Callout_Validation__c</fullName>
        <label>Pre-Auth Callout Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Callout</label>
    <listViews>
        <fullName>All_Fields</fullName>
        <columns>MasterLabel</columns>
        <columns>Auth_Callout__c</columns>
        <columns>Auth_Callout_Handler__c</columns>
        <columns>Base_URL__c</columns>
        <columns>Custom_Callout_Execution__c</columns>
        <columns>Is_Auth_Callout__c</columns>
        <columns>Method__c</columns>
        <columns>Path__c</columns>
        <columns>Pre_Auth_Callout_Validation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Fields</label>
    </listViews>
    <pluralLabel>Callouts</pluralLabel>
</CustomObject>